infra/k8s_azure/aks-sfs-mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: referit
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongo
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  namespace: referit
spec:
  selector:
    matchLabels:
      app: mongo
  serviceName: "mongo"
  replicas: 1
  template:
    metadata:
      labels:
        app: mongo
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: mongo
          image: mongo
          command:
            - mongod
            - "--bind_ip_all"
            - "--replSet"
            - rs0
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: azure-vol
              mountPath: /data/db
      volumes:
        - name: azure-vol
          persistentVolumeClaim:
            claimName: mongo-pvc
