infra/k8s_azure/referit-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: referit-frontend-deployment
  namespace: referit
  labels:
    app: referit-frontend
spec:
  selector:
    matchLabels:
      app: referit-frontend
  template:
    metadata:
      labels:
        app: referit-frontend
    spec:
      containers:
      - name: referit-frontend
        image: masterchief01/referit-frontend:latest
        ports:
        - containerPort: 3000
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: referit-frontend-service
  namespace: referit
spec:
  selector:
    app: referit-frontend
  ports:
  - name: http
    port: 3000
    targetPort: 3000
